[metadata]
name = pytsa
author = Thimo Visser
author-email = thimo.visser@gmail.com
summary = PYThon Strict Arguments
description-file =
    README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/thimovss/pytsa
project_urls =
    Source Code = https://github.com/thimovss/pytsa
requires-python = >=2.6
classifier =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5

[files]
packages =
    pytsa

[bdist_wheel]
universal = 1