[metadata]
name = pytsa
author = Thimo Visser
author-email = thimo.visser@gmail.com
summary = PYThon Strict Arguments
description-file =
    README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/thimovss/pytsa
project_urls =
    Source Code = https://github.com/thimovss/pytsa
classifier =
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Topic :: Utilities
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Natural Language :: English
        Programming Language :: Python
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Development Status :: 3 - Alpha

[files]
packages =
    pytsa

[bdist_wheel]
universal = 1
